[package]
name = "simple_login_purge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
directories = "4.0.1"
serde = { version = "1.0.147", features = ["derive"] }
simple_login_rs = "0.1.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
